# stac-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATES/: pull_request_template.md
.github/workflows/: continuous-integration.yaml
scripts/: format  lint  test
src/stac_cli/: cli.py
tests/: test_cli.py
