[project]
name = "stac-cli"
version = "0.1.0"
description = "CLI for working SpatioTemporal Asset Catalog (STAC) data and APIs."
readme = "README.md"
authors = [
    { name = "Preston Hartzell", email = "preston.hartzell@gmail.com" },
    { name = "Pete Gadomski", email = "pete.gadomski@gmail.com" },
]
maintainers = [
    { name = "Preston Hartzell", email = "preston.hartzell@gmail.com" },
    { name = "Pete Gadomski", email = "pete.gadomski@gmail.com" },
]
keywords = ["STAC", "imagery", "raster", "catalog"]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3"
]

[project.scripts]
stac = "stac_cli.cli:stac"

[project.optional-dependencies]
dev = [
    "black",
    "codespell",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-console-scripts",
    "pytest-cov",
    "ruff",
]
docs = []

[project.urls]
homepage = "https://github.com/stac-utils/stac-cli"
documentation = "https://stac-cli.readthedocs.io"
repository = "https://github.com/stac-utils/stac-cli.git"
changelog = "https://github.com/stac-utils/stac-cli/blob/main/CHANGELOG.md"
discussions = "https://github.com/radiantearth/stac-spec/discussions/categories/stac-software"

[tool.ruff]
ignore = ["E722", "E731"]
line-length = 88
select = ["E", "F", "W"]

[tool.mypy]
show_error_codes = true
strict = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
